--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -56,10 +56,11 @@
  }
  
  .navbar-default {
+    background-color:dodgerblue;
  
      padding-top: 5px;
      padding-bottom: 5px;
-     background-color: #fff;
+
  
      .navbar-nav > li > a {
          color: #222;
@@ -85,7 +86,7 @@
 
  .product {
 	box-sizing: border-box;
-	background-color: darkcyan;
+    background-color: lawngreen;
 	margin-bottom: 25px;
 	margin-right: 10px;
 	margin-left: 10px;
