--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,24 +1,78 @@
+<style>
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td {
+    font-size: 15px;
+    text-align: left;
+    padding: 8px;
+}
+
+tr:nth-child(even) {background-color: #f2f2f2;}
+th {
+    text-align: left;
+    padding: 8px;
+    font-size: 20px;
+    background-color: #4CAF50;
+    color: white;
+}
+.flex-container {
+  display: flex;
+  justify-content: flex-end;
+}
+.btn-cart{
+    padding-right: 10px;
+    font-size: 20px;
+}
+</style>
+
+
 <div class="keep-shopping">
     <%= link_to 'Keep Shoppping', products_path %>
 </div>
 <hr>
 
-<section class="section">
-    <% @cart.line_items.each do |pro| %>
-        <div><h2 class="product-title"><%= pro.product.title %></h2></div>
-        <div><p>Price  :<%= pro.product.price %></p></div>  
-        <div><p>Quantity  :<%= pro.quantity %></p></div>  
-        <div><%= number_to_currency(pro.total_price)%></div>
-        <div><%= link_to 'Remove Item', line_item_path(pro), method: :delete, data: {confirm: "Are you sure?"}%></div>
-        <hr>  
-    <%end%>
 
-    <div style="display: flex;class="column">
-    <%= button_to 'Empty Cart', @cart, method: :delete, data: {confirm: "Are you Sure?"}%>
-    <%= button_to 'Go Checkout', checkout_create_path, method: :post, params: {id: @cart.id} , remote: true%>
+<table>
+    <thead>
+        <th>TITLE</th>
+        <th>PRICE</th>
+        <th>QUANTITY</th>
+        <th>TOTAL</th>
+        <th>ACTION</th>
+    </thead>
+    <tbody>
+     <% @cart.line_items.each do |pro| %>
+        <tr>
+            <td><%= pro.product.title %></td>
+            <td><%= pro.product.price %></td>
+            <td><%= pro.quantity %></td>
+            <td><%= number_to_currency(pro.total_price)%></td>
+            <td><%= link_to 'Remove Item', line_item_path(pro), method: :delete, data: {confirm: "Are you sure?"}%></td>
+        </tr>
+    <% end %>
+    </tbody>
+</table>
+<div style="text-align:right; font-size:20px;">
+        <h4>Total: <%= number_to_currency(@cart.total_price)%></h4>
+</div>
+<section>
+    <hr>
+    <div class="flex-container">
+        <div class="btn-cart">
+            <%= button_to 'Empty Cart', @cart, method: :delete, data: {confirm: "Are you Sure?"}%>
+        </div>
+        <% if current_user %>
+        <div class="btn-cart">
+            <%= button_to 'Go Checkout', checkout_create_path, method: :post, params: {id: @cart.id} , remote: true%>
+        </div>
+        <% else %>
+        <div class="btn-cart">
+            <%= link_to 'Register to Checkout', new_user_registration_path%>
+        </div>
+        <% end %>
     </div>
 
-    <div class="column">
-    <h4>Total: <%= number_to_currency(@cart.total_price)%></h4>
-    </div>
 </section>
