--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,3 +7,6 @@
     </div>
 </div>
 <%end%>
+<footer style="padding-bottom: 20px;">
+<%= will_paginate @products, renderer: BootstrapPagination::Rails, previous_label: "Older", next_label: "Newer", inner_window: 1, outer_window: 0 %>
+</footer>
